<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LayoutAssignment2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_desc">droid_kun</string>
    <string name="file_name">res/ic_launcher.png</string>
    <string name="top_text">ドロイド君の画像ファイル</string>
    <string name="xhdpi">xhdpi</string>
    <string name="file_size">12,516 bytes</string>

</resources>