<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    tools:context=".MainActivity" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="4dp"
    	android:background="@color/menu_background" >

        <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
	    	
            <TextView
                android:id="@+id/top_text"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_margin="8dp"
			    android:textSize="16sp"
			    android:text="@string/top_text" /> 
			    
            <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/top_text"
			    android:layout_alignRight="@+id/top_text"
			    android:textColor="@color/sub_font_color"
			    android:text="@string/file_name" /> 

            <ImageView
	            android:id="@+id/image"
	            android:contentDescription="@string/image_desc"
	            android:layout_width="wrap_content"
	            android:layout_height="100dp"
	            android:layout_marginTop="4dp"
	            android:layout_marginRight="4dp"
	            android:layout_alignParentRight="true"
	            android:background="#ffffff"
	            android:src="@drawable/ic_launcher" />
            
            
	    </RelativeLayout>
        
    </LinearLayout>
                
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
   		android:background="@color/menu_background" >
        
            <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
	   			android:layout_margin="4dp"
			    android:textColor="@color/sub_font_color"
			    android:textSize="12sp"
			    android:text="@string/xhdpi" /> 
			    
            <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentRight="true"
	   			android:layout_margin="2dp"
			    android:textSize="12sp"
			    android:text="@string/file_size" /> 
        
    </RelativeLayout>
                

</LinearLayout>